# gojo

./: .gitignore  ACCELEROMETER_ROOT_CAUSE.md  AGENTS.md  ANALYSIS_SESSION_OCT31.md  ANALYSIS_SUMMARY.txt  ANDROID_SERVICE_PLAN.md  ARCHITECTURE_DIAGRAM.txt  BASELINE_VALIDATION_QUICKSTART.md  CLAUDE.md  COMMUNITY_RESEARCH_FINDINGS.md  COMPARISON_BASELINE_TRACKER.md  CRASH_LOGGING.md  CYTHON_INTEGRATION.py  CYTHON_SUMMARY.txt  DAEMON_FIX_SUMMARY.md  DASHBOARD_MAP_FIX.md  DASHBOARD_QUICK_FIX.md  DR_TEST_GUIDE.md  EXTENDED_TEST_RESULTS_10MIN.md  FILTER_MODULE_COMPLETE.md  FINAL_SYSTEM_AUDIT.md  FIX_REFERENCE.txt  GEMINI.md  GYROSCOPE_INTEGRATION_COMPLETE.md  GYROSCOPE_INTEGRATION_DELIVERY.md  GYROSCOPE_INTEGRATION_SUMMARY.txt  GYRO_ACCEL_SYNC_REPORT.md  GYRO_DEBUGGING_FINDINGS.md  GYRO_EKF_METRICS_GUIDE.md  GYRO_EKF_VALIDATION_METRICS.md  HEALTH_MONITOR_FAILURE_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  INVESTIGATION_REPORT_FINAL.txt  LIVE_MONITOR_README.md  MANIFEST.md  MAP_MATCHING_PROGRESS.md  MEMORY_FIX_SUMMARY.txt  MEMORY_INVESTIGATION.md  MEMORY_INVESTIGATION_REPORT.md  (+66 more)
.claude/: ANALYSIS_INDEX.md  ARCHITECTURE_REFACTOR_PLAN.md  CLAUDE.md  CODE_REVIEW_BUG_REPORT.md  FIXES_APPLIED.md  GPS_ROADMAP.md  GYRO_BIAS_FINDINGS.md  HEALTH_MONITOR_BUG_SUMMARY.md  INVESTIGATION_ANSWERS.md  MEMORY_INVESTIGATION_FINDINGS.md  NUMBA_OPTIMIZATION_PLAN.md  PYPY_BENCHMARK_RESULTS.md  QUEUE_RACE_CONDITION_EXPLAINED.md  SENSOR_CAPABILITIES.md
data/: benchmark_100hz_20251023_151955.json  benchmark_10hz_20251023_151955.json  benchmark_10hz_20251023_155426.json  benchmark_25hz_20251023_151955.json  benchmark_50hz_20251023_151955.json  (+40 more)
docs/: BUILD_CYTHON.md  (+3 more)
motion-tracker-android/rust/: Cargo.toml
motion-tracker-android/rust/src/: android_jni.rs  error.rs  lib.rs  sensor_receiver.rs  session.rs  storage.rs
motion_tracker_rs/: Cargo.toml  NIS_TUNING_GUIDE.md  PHASE5_INTEGRATION.md  PHASE5_SUMMARY.md  REPLAY_NIS_QUICKSTART.md  plot_traj.py  replay_batch.out
motion_tracker_rs/docs/: NALGEBRA_MIGRATION.md
motion_tracker_rs/examples/: overpass_example.rs  road_tree_demo.rs  test_linalg_types.rs  trajectory_prediction.rs
motion_tracker_rs/scripts/: blind_drive_report.py  race_engineer.py  stitch_drive.py  validate_fixes.py
motion_tracker_rs/src/: dashboard.rs  dashboard_static.html  health_monitor.rs  incident.rs  lib.rs  live_status.rs  main.rs  physics.rs  rerun_logger.rs  restart_manager.rs  sensor_fusion.rs  sensors.rs  smoothing.rs  types.rs
motion_tracker_rs/src/factors/: gps.rs  graph_estimator.rs  imu_preintegration.rs  mod.rs
motion_tracker_rs/src/filters/: complementary.rs  ekf_13d.rs  ekf_15d.rs  es_ekf.rs  fgo.rs  mod.rs  ukf_15d.rs
motion_tracker_rs/src/map_match/: README.md  matcher.rs  mod.rs  osm_parser.rs  overpass_fetcher.rs  road_tree.rs  tile_coord.rs  tile_manager.rs
motion_tracker_rs/src/types/: linalg.rs  mod.rs
(+186 files in other folders)
