[package]
name = "motion_tracker_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "motion_tracker"
path = "src/main.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"

[[bin]]
name = "ekf_gps_demo"
path = "src/bin/ekf_gps_demo.rs"

[lib]
name = "motion_tracker_rs"
path = "src/lib.rs"

[dependencies]
ndarray = "0.15"
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
crossbeam = "0.8"
crossterm = "0.26"
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
futures = "0.3"
rerun = "0.15"
glam = "0.24"
flate2 = "1.0"
geo = "0.28"
rstar = "0.11"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"

[dev-dependencies]
approx = "0.5"
env_logger = "0.11"
