[package]
name = "motion_tracker_jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
nalgebra = "0.32"
ndarray = "0.15"
anyhow = "1.0"
thiserror = "1.0"
crossbeam = "0.8"
lazy_static = "1.4"
android_log = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
